2024-01-29T08:17:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7693056065 # 67
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1046
* notice: next accum: outdated-unq outdated-all / unq all: 597 1023 / 611 1047
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-29T01:02:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7689722463 # 66
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 2 23
* notice: prev accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1045
* notice: next accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1046
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-28]

2024-01-28T08:16:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7684457602 # 64
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
* notice: last 14d: unq all: 2 22
* notice: prev accum: outdated-unq outdated-all / unq all: 597 1023 / 609 1044
* notice: next accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1045
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-28]

2024-01-27T16:15:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679763211 # 62