@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-29T08:17:23Z",
+  "timestamp" : "2024-01-30T01:02:01Z",
   "count_outdated" : 1023,
   "uniques_outdated" : 597,
-  "count" : 1047,
+  "count" : 1048,
   "uniques" : 611,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2024-01-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
